--- a/Pandas/Rename Columns.ipynb
+++ b/Pandas/Rename Columns.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "efe55879",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
     "        'last': 'last_name',\n",
     "        'age': 'age_in_years'\n",
     "    })\n",
-    "    return students"
+    "    return students\n"
    ]
   },
   {
