--- a/Pandas/Rename Columns.ipynb
+++ b/Pandas/Rename Columns.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "# Rename columns\n",
     "renamed_students = renameColumns(students)\n",
-    "print(renamed_students)"
+    "print(renamed_students)\n"
    ]
   }
  ],
