--- a/Pandas/Rename Columns.ipynb
+++ b/Pandas/Rename Columns.ipynb
@@ -44,7 +44,7 @@
     "- The function creates a new DataFrame with renamed columns, but it does not create any additional data structures that scale with the input size.\n",
     "- Therefore, the space complexity is \\( O(1) \\), as it only modifies the column metadata.\n",
     "\n",
-    "##### Summary\n",
+    "##### ***Summary***\n",
     "- **Time Complexity:** \\( O(1) \\)\n",
     "- **Space Complexity:** \\( O(1) \\)"
    ]
