Display the First Three Rows

--- a/Pandas/Display the First Three Rows.ipynb
+++ b/Pandas/Display the First Three Rows.ipynb
@@ -36,7 +36,7 @@
    "id": "fe923568",
    "metadata": {},
    "source": [
-    "##### Time and Space Complexity:\n",
+    "##### ***Time and Space Complexity:***\n",
     "\n",
     "Time Complexity: O(1)\n",
     "\n",
