Display the First Three Rows

--- a/Pandas/Display the First Three Rows.ipynb
+++ b/Pandas/Display the First Three Rows.ipynb
@@ -5,7 +5,7 @@
    "id": "66f887d2",
    "metadata": {},
    "source": [
-    "### 2879. Display the First Three Rows\n"
+    "### 2879. ***Display the First Three Rows***\n"
    ]
   },
   {
