--- a/Pandas/Create a New Column.ipynb
+++ b/Pandas/Create a New Column.ipynb
@@ -5,7 +5,7 @@
    "id": "dd81fdcb",
    "metadata": {},
    "source": [
-    "### 2881. ***Create a New Column***"
+    "### 2881. **_Create a New Column_**\n"
    ]
   },
   {
@@ -13,21 +13,22 @@
    "id": "f9799b36",
    "metadata": {},
    "source": [
-    "Solution 1"
+    "Solution 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c42b0c90",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def createBonusColumn(employees: pd.DataFrame) -> pd.DataFrame:\n",
     "    employees['bonus'] = employees['salary'] * 2\n",
-    "    return employees\n"
+    "    return employees"
    ]
   },
   {
@@ -35,11 +36,11 @@
    "id": "36f961ba",
    "metadata": {},
    "source": [
-    "***Time and Space Complexity***\n",
+    "**_Time and Space Complexity_**\n",
     "\n",
     "`Time Complexity`: O(n), where n is the number of rows in the DataFrame.\n",
     "\n",
-    "`Space Complexity`: O(1). The operation is performed in place."
+    "`Space Complexity`: O(1). The operation is performed in place.\n"
    ]
   },
   {
@@ -47,23 +48,24 @@
    "id": "b929c30b",
    "metadata": {},
    "source": [
-    "Solution"
+    "Solution\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "551dc8eb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def createBonusColumn(employees: pd.DataFrame) -> pd.DataFrame:\n",
     "    return employees.assign(bonus=2*employees[\"salary\"])\n",
     "\n",
     "# Time complexity  :  O(n)\n",
-    "# Space complexity : O(1)\n"
+    "# Space complexity : O(1)"
    ]
   },
   {
@@ -71,12 +73,12 @@
    "id": "9922b351",
    "metadata": {},
    "source": [
-    "***Exmaple usage***"
+    "**_Exmaple usage_**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "51d3463e",
    "metadata": {},
    "outputs": [
@@ -97,9 +99,11 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def createBonusColumn(employees: pd.DataFrame) -> pd.DataFrame:\n",
     "    employees['bonus'] = employees['salary'] * 2\n",
     "    return employees\n",
+    "\n",
     "\n",
     "# Example Usage:\n",
     "data = {'name': ['Piper', 'Grace', 'Georgia', 'Willow', 'Finn', 'Thomas'],\n",
@@ -108,7 +112,7 @@
     "employees_df = pd.DataFrame(data)\n",
     "\n",
     "result = createBonusColumn(employees_df)\n",
-    "print(result)\n"
+    "print(result)"
    ]
   }
  ],
