create a new column

--- a/Pandas/Create a New Column.ipynb
+++ b/Pandas/Create a New Column.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "def createBonusColumn(employees: pd.DataFrame) -> pd.DataFrame:\n",
     "    employees['bonus'] = employees['salary'] * 2\n",
-    "    return employees"
+    "    return employees\n"
    ]
   },
   {
