change data type

--- a/Pandas/Change Data Type.ipynb
+++ b/Pandas/Change Data Type.ipynb
@@ -5,7 +5,7 @@
    "id": "8033aa4d",
    "metadata": {},
    "source": [
-    "### 2886.Change Data Type"
+    "### ***2886.Change Data Type***"
    ]
   },
   {
