--- a/30 Days of Pandas/Recyclable and Low Fat Products.ipynb
+++ b/30 Days of Pandas/Recyclable and Low Fat Products.ipynb
@@ -24,6 +24,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "08468c59",
+   "metadata": {},
+   "source": [
+    "Time and Space Complexity\n",
+    "\n",
+    "    Time Complexity:\n",
+    "        The filtering operation involves scanning through the DataFrame once, which takes O(n) time, where n is the number of rows in the DataFrame.\n",
+    "    Space Complexity:\n",
+    "        The space complexity is O(k), where k is the number of rows that satisfy the filtering condition. In addition, some constant space is used for the DataFrame and any temporary variables.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2432d8d1",
    "metadata": {},
    "source": [
