--- a/30 Days of Pandas/Recyclable and Low Fat Products.ipynb
+++ b/30 Days of Pandas/Recyclable and Low Fat Products.ipynb
@@ -27,9 +27,9 @@
    "id": "08468c59",
    "metadata": {},
    "source": [
-    "**Time and Space Complexity**\n",
+    "***Time and Space Complexity***\n",
     "\n",
-    "Time Complexity:\n",
+    "***Time Complexity:***\n",
     "        The filtering operation involves scanning through the DataFrame once, which takes O(n) time, where n is the number of rows in the DataFrame.\n",
     "\n",
     "Space Complexity:\n",
