--- a/30 Days of Pandas/Recyclable and Low Fat Products.ipynb
+++ b/30 Days of Pandas/Recyclable and Low Fat Products.ipynb
@@ -4,6 +4,23 @@
    "cell_type": "markdown",
    "id": "35fa5620",
    "metadata": {},
+   "source": [
+    "### **1757.Recyclable and Low Far Products**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dc0ee50",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
