Recyclable and Low Far Products

--- a/30 Days of Pandas/Recyclable and Low Fat Products.ipynb
+++ b/30 Days of Pandas/Recyclable and Low Fat Products.ipynb
@@ -5,23 +5,25 @@
    "id": "35fa5620",
    "metadata": {},
    "source": [
-    "### **1757.Recyclable and Low Far Products**"
+    "### **1757.Recyclable and Low Far Products**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4905dd5a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def find_products(products: pd.DataFrame) -> pd.DataFrame:\n",
     "    # Filter for rows where both 'low_fats' and 'recyclable' are 'Y'\n",
-    "    result = products[(products['low_fats'] == 'Y') & (products['recyclable'] == 'Y')]\n",
+    "    result = products[(products['low_fats'] == 'Y') &\n",
+    "                      (products['recyclable'] == 'Y')]\n",
     "    # Return only the 'product_id' column\n",
-    "    return result[['product_id']]\n"
+    "    return result[['product_id']]"
    ]
   },
   {
@@ -29,13 +31,13 @@
    "id": "08468c59",
    "metadata": {},
    "source": [
-    "***Time and Space Complexity***\n",
+    "**_Time and Space Complexity_**\n",
     "\n",
-    "***Time Complexity:***\n",
-    "        The filtering operation involves scanning through the DataFrame once, which takes **O(n)** time, where n is the number of rows in the DataFrame.\n",
+    "**_Time Complexity:_**\n",
+    "The filtering operation involves scanning through the DataFrame once, which takes **O(n)** time, where n is the number of rows in the DataFrame.\n",
     "\n",
-    "***Space Complexity:***\n",
-    "        The space complexity is **O(k)**, where k is the number of rows that satisfy the filtering condition. In addition, some constant space is used for the DataFrame and any temporary variables.\n"
+    "**_Space Complexity:_**\n",
+    "The space complexity is **O(k)**, where k is the number of rows that satisfy the filtering condition. In addition, some constant space is used for the DataFrame and any temporary variables.\n"
    ]
   },
   {
@@ -43,7 +45,7 @@
    "id": "2432d8d1",
    "metadata": {},
    "source": [
-    "***Example usage***"
+    "**_Example usage_**\n"
    ]
   },
   {
