--- a/30 Days of Pandas/Customers Who Never Order.ipynb
+++ b/30 Days of Pandas/Customers Who Never Order.ipynb
@@ -50,17 +50,17 @@
    "source": [
     "Time Complexity\n",
     "\n",
-    "The main operation in the solution is a left merge (join) between the customers DataFrame (size nn) and the orders DataFrame (size mm), followed by filtering rows:\n",
+    "The main operation in the solution is a left merge (join) between the customers DataFrame (size n) and the orders DataFrame (size m), followed by filtering rows:\n",
     "\n",
-    "    Merge Operation:\n",
+    "* Merge Operation:\n",
     "\n",
-    "        In pandas, a merge (join) operation on unsorted data typically takes O(n+m)O(n+m) time if the join columns are indexed (hashed join), or up to O(nlog⁡n+mlog⁡m)O(nlogn+mlogm) if sorting is required.\n",
+    "    * In pandas, a merge (join) operation on unsorted data typically takes O(n+m) time if the join columns are indexed (hashed join), or up to O(nlog⁡n+mlog⁡m) if sorting is required.\n",
     "\n",
-    "        For this problem, assuming the join columns are not pre-indexed, the expected time complexity is O(n+m)O(n+m) due to hashing.\n",
+    "    * For this problem, assuming the join columns are not pre-indexed, the expected time complexity is O(n+m) due to hashing.\n",
     "\n",
     "    Filtering:\n",
     "\n",
-    "        After the merge, filtering for NaN values in a column is O(n)O(n), since it scans each row once.\n",
+    "    * After the merge, filtering for NaN values in a column is O(n), since it scans each row once.\n",
     "\n",
     "Total Time Complexity:\n",
     "O(n+m)\n",
@@ -68,28 +68,25 @@
     "\n",
     "Space Complexity\n",
     "\n",
-    "    Merge Result:\n",
+    "* Merge Result:\n",
     "\n",
-    "        The merged DataFrame will have up to nn rows (since it's a left join with customers as the left table) and columns from both tables, so the space is O(n)O(n).\n",
+    "    * The merged DataFrame will have up to n rows (since it's a left join with customers as the left table) and columns from both tables, so the space is O(n).\n",
     "\n",
     "    Output DataFrame:\n",
     "\n",
-    "        The output DataFrame contains only the names of customers who never ordered, which is at most nn, so space is O(n)O(n).\n",
+    "    * The output DataFrame contains only the names of customers who never ordered, which is at most n, so space is O(n).\n",
     "\n",
     "Total Space Complexity:\n",
-    "O(n+m)\n",
-    "O(n+m)\n",
     "\n",
-    "Summary Table\n",
-    "Operation\tTime Complexity\tSpace Complexity\n",
-    "Merge\tO(n+m)O(n+m)\tO(n+m)O(n+m)\n",
-    "Filtering/Output\tO(n)O(n)\tO(n)O(n)\n",
+    "* O(n+m)\n",
+    "* O(n+m)\n",
+    "\n",
     "\n",
     "Overall:\n",
     "\n",
-    "    Time: O(n+m)O(n+m)\n",
+    "* Time: O(n+m)\n",
     "\n",
-    "    Space: O(n+m)O(n+m)\n"
+    "* Space: O(n+m)\n"
    ]
   },
   {
