--- a/30 Days of Pandas/Customers Who Never Order.ipynb
+++ b/30 Days of Pandas/Customers Who Never Order.ipynb
@@ -99,10 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "18515e48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Customers\n",
+      "1     Henry\n",
+      "3       Max\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
