--- a/30 Days of Pandas/Article Views I.ipynb
+++ b/30 Days of Pandas/Article Views I.ipynb
@@ -15,6 +15,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5bfffd1",
+   "metadata": {},
+   "source": [
+    "***Time and Space Complexity***"
+   ]
   }
  ],
  "metadata": {
