--- a/30 Days of Pandas/Article Views I.ipynb
+++ b/30 Days of Pandas/Article Views I.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3c7b347",
+   "metadata": {},
+   "source": [
+    "***Solution***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "94a5ff5a",
