Calculate Special Bonus

--- a/30 Days of Pandas/Calculate Special Bonus.ipynb
+++ b/30 Days of Pandas/Calculate Special Bonus.ipynb
@@ -31,7 +31,9 @@
    "cell_type": "markdown",
    "id": "efff6fda",
    "metadata": {},
-   "source": []
+   "source": [
+    "example usage"
+   ]
   }
  ],
  "metadata": {
