Calculate Special Bonus

--- a/30 Days of Pandas/Calculate Special Bonus.ipynb
+++ b/30 Days of Pandas/Calculate Special Bonus.ipynb
@@ -32,7 +32,31 @@
    "id": "efff6fda",
    "metadata": {},
    "source": [
-    "example usage"
+    "**Example Usage**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29892ac1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Example employee data\n",
+    "data = {\n",
+    "    'employee_id': [1, 2, 3, 4, 5],\n",
+    "    'name': ['Alice', 'Bob', 'Mona', 'David', 'Mike'],\n",
+    "    'salary': [1000, 1500, 1200, 1100, 1300]\n",
+    "}\n",
+    "\n",
+    "employees = pd.DataFrame(data)\n",
+    "\n",
+    "# Calculate special bonus\n",
+    "result = calculate_special_bonus(employees)\n",
+    "\n",
+    "print(result)\n"
    ]
   }
  ],
