Calculate Special Bonus

--- a/30 Days of Pandas/Calculate Special Bonus.ipynb
+++ b/30 Days of Pandas/Calculate Special Bonus.ipynb
@@ -37,10 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "29892ac1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   employee_id  bonus\n",
+      "0            1   1000\n",
+      "1            2      0\n",
+      "2            3      0\n",
+      "3            4      0\n",
+      "4            5      0\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
