Calculate Special Bonus

--- a/30 Days of Pandas/Calculate Special Bonus.ipynb
+++ b/30 Days of Pandas/Calculate Special Bonus.ipynb
@@ -29,6 +29,61 @@
   },
   {
    "cell_type": "markdown",
+   "id": "144d1c95",
+   "metadata": {},
+   "source": [
+    "**Time and Space Complexity**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6eec986",
+   "metadata": {},
+   "source": [
+    " ##### Time Complexity\n",
+    "\n",
+    "The function applies a lambda function to each row of the DataFrame using apply(..., axis=1):\n",
+    "\n",
+    "- Let n be the number of employees (i.e., number of rows in the DataFrame).\n",
+    "\n",
+    "- For each row, the lambda does constant-time operations:\n",
+    "\n",
+    "    - Modulus: row['employee_id'] % 2\n",
+    "\n",
+    "    - String check: row['name'].startswith('M')\n",
+    "\n",
+    "    - Conditional check and possibly returning row['salary']\n",
+    "\n",
+    "So, total operations = O(n)\n",
+    "\n",
+    " - Sorting the DataFrame by employee_id takes O(n log n) time in the worst case.\n",
+    "\n",
+    "**Total Time Complexity: O(n log n)**\n",
+    "\n",
+    "\n",
+    "##### Space Complexity\n",
+    "\n",
+    "- A new bonus column is added → this takes O(n) extra space.\n",
+    "\n",
+    "- Sorting returns a new DataFrame or view, which also takes O(n) space in the worst case.\n",
+    "\n",
+    "**Total Space Complexity: O(n)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88f6e5bf",
+   "metadata": {},
+   "source": [
+    "Summary\n",
+    "\n",
+    "* Time Complexity: O(n log n)\n",
+    "\n",
+    "* Space Complexity: O(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "efff6fda",
    "metadata": {},
    "source": [
